feat: Add createAccount workflow and Stripe Integration
