# src/main/java/com/midas/app/models/ProviderType.java
@@ -1,0 +1,5 @@
+package com.midas.app.models;
+
+public enum ProviderType {
+  STRIPE,
+}
